classDiagram
    class Task {
        +str title
        +int duration_minutes
        +str priority
        +str category
        +str frequency
        +date due_date
        +int start_time
        +bool completed
        +mark_complete()
        +reset()
        +is_high_priority() bool
        +__repr__() str
    }

    class Pet {
        +str name
        +str species
        +int age
        +list tasks
        +add_task(task)
        +remove_task(title)
        +get_tasks() list
        +get_pending_tasks() list
    }

    class Owner {
        +str name
        +int available_minutes
        +list preferences
        +list pets
        +add_pet(pet)
        +get_pets() list
        +get_all_tasks() list
        +get_available_minutes() int
    }

    class Scheduler {
        +Owner owner
        +generate_plan() DailyPlan
        +get_all_pending_tasks() list
        +mark_task_complete(title) bool
        +detect_conflicts() list
        +reset_all_tasks()
        -_sort_tasks() list
        -_fits_in_time(task) bool
    }

    class DailyPlan {
        +list scheduled_tasks
        +list skipped_tasks
        +int total_duration
        +display() str
        +explain() str
    }

    Owner "1" *-- "*" Pet : owns
    Pet "1" *-- "*" Task : contains
    Scheduler --> Owner : uses
    Scheduler ..> DailyPlan : generates
